--- a/package.json
+++ b/package.json
@@ -23,8 +23,18 @@
   },
   "homepage": "https://github.com/pwndex/gulp-starter-kit/",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "browser-sync": "^2.26.12",
+    "del": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-dependents": "^1.2.5",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.1.0"
   }
 }
